--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>lo</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, alias!</p>
 </body>
 </html>
